[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "CSPy"
version = "0.0.1"
description = "Python Caratheodory-Steinitz Pruning"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Filip Belik", email = "fjbelik@gmail.com" }
]
keywords = ["caratheodory", "pruning", "julia", "numerical"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy",
  "juliacall"
]

[project.urls]
Homepage = "https://github.com/fbelik/CaratheodoryPruning.jl"
Documentation = "https://fbelik.github.io/CaratheodoryPruning.jl/dev/"
Source = "https://github.com/fbelik/CaratheodoryPruning.jl"
Issues = "https://github.com/fbelik/CaratheodoryPruning.jl/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["CSPy*"]

[tool.setuptools.package-data]
CSPy = ["Project.toml", "Manifest.toml", "juliapkg.json"]
